# diplom

./: README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: ais_ingestor.py  crud.py  database.py  init_data_full_fields.py  main.py  models.py  notifier.py  schemas.py  socket_manager.py  ws_manager.py
backend/app/routers/: __init__.py  ais.py  alerts.py  predict.py  vessel.py  ws.py
backend/migrations/: env.py
backend/migrations/versions/: 9fad5342b4d1_add_vessel_type.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/app/: app-layout.tsx
frontend/src/app/router/: app-router.tsx
frontend/src/entity/ship/: index.ts
frontend/src/entity/ship/api/: ship-api.ts
frontend/src/features/map/: index.ts
frontend/src/features/mode-toggle/: index.ts
frontend/src/features/ship-filter/: index.ts
frontend/src/features/weather/: index.ts
frontend/src/pages/alerts/: index.ts
frontend/src/pages/analytics/: index.ts
frontend/src/pages/docs/: index.ts
frontend/src/pages/documentation/: index.ts
frontend/src/pages/history/: index.ts
frontend/src/pages/monitoring/: index.ts
frontend/src/shared/hooks/: use-AIS-socket.ts  use-fps.tsx
frontend/src/shared/routes/: routes.ts
frontend/src/shared/ui/: sidebar.tsx
frontend/src/shared/utils/: ship-type-maps.ts
frontend/src/widgets/map/: index.ts
ml-service/: .gitignore  Dockerfile  README.md  main.py  model.py  predict.py  requirements.txt  schemas.py
(+28 files in other folders)
