[tool.poetry]
name = "ship-tracker"
version = "0.1.0"
description = ""
authors = ["you <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
pydantic = "^2.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
